--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="bower_components/pure/pure-min.css">
         <link rel="stylesheet" href="bower_components/pure/grid-responsive-min.css">
         <link rel="stylesheet" href="css/pure.css">
+        <link rel="stylesheet" href="css/total.css">
     </head>
     <body>
         <div class="pure-menu pure-menu-horizontal top-menu">
@@ -19,6 +20,9 @@
                 <li class="pure-menu-list">
                     <a href="contact.html" class="pure-menu-link"> contact </a> </li>
             </ul>
+        </div>
+        <div class="landing">
+            <h1> Kyle McKean' Blog </h1>
         </div>
     </body>
 </html>
